--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.1'
+    implementation 'androidx.activity:activity-ktx:1.2.0'
+    implementation 'androidx.fragment:fragment-ktx:1.3.2'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -49,4 +51,7 @@ dependencies {
     implementation 'com.amplifyframework:core:1.4.0'
     implementation 'com.amplifyframework:aws-auth-cognito:1.4.0'
     implementation 'com.amplifyframework:aws-api:1.17.1'
+
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+
 }
