--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,54 +4,70 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <application
-        android:name="AndroidGettingStartedApplication"
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.AWSTutorial">
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.AWSTutorial.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+    <!-- To request foreground location access, declare one of these permissions. -->
+    <!-- <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> -->
+     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+     <!-- Required only when requesting background location access on
+      Android 10 (API level 29) and higher. -->
+    <!-- <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" /> -->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name="com.amazonaws.mobileconnectors.cognitoauth.activities.CustomTabsRedirectActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
 
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
 
-                <data android:scheme="gettingstarted" />
-            </intent-filter>
-        </activity>
 
-        <activity
-            android:name=".AddNoteActivity"
-            android:label="Add Note"
-            android:theme="@style/Theme.AWSTutorial.NoActionBar">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.awstutorial.MainActivity" />
-        </activity>
+ <application
+         android:name="AndroidGettingStartedApplication"
+         android:allowBackup="true"
+         android:icon="@mipmap/ic_launcher"
+         android:label="@string/app_name"
+         android:roundIcon="@mipmap/ic_launcher_round"
+         android:supportsRtl="true"
+         android:theme="@style/Theme.AWSTutorial">
+         <activity
+             android:name=".MainActivity"
+             android:label="@string/app_name"
+             android:theme="@style/Theme.AWSTutorial.NoActionBar">
+             <intent-filter>
+                 <action android:name="android.intent.action.MAIN" />
 
-        <activity
-            android:name=".AddActivityItem"
-            android:label="Add Item"
-            android:theme="@style/Theme.AWSTutorial.NoActionBar">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.awstutorial.MainActivity" />
-        </activity>
+                 <category android:name="android.intent.category.LAUNCHER" />
+             </intent-filter>
+         </activity>
+         <activity
+             android:name="com.amazonaws.mobileconnectors.cognitoauth.activities.CustomTabsRedirectActivity">
+             <intent-filter>
+                 <action android:name="android.intent.action.VIEW" />
 
+                 <category android:name="android.intent.category.DEFAULT" />
+                 <category android:name="android.intent.category.BROWSABLE" />
+
+                 <data android:scheme="gettingstarted" />
+             </intent-filter>
+         </activity>
+
+         <activity
+             android:name=".AddNoteActivity"
+             android:label="Add Note"
+             android:theme="@style/Theme.AWSTutorial.NoActionBar">
+             <meta-data
+                 android:name="android.support.PARENT_ACTIVITY"
+                 android:value="com.example.awstutorial.MainActivity" />
+         </activity>
+
+         <activity
+             android:name=".AddActivityItem"
+             android:label="Add Item"
+             android:theme="@style/Theme.AWSTutorial.NoActionBar">
+             <meta-data
+                 android:name="android.support.PARENT_ACTIVITY"
+                 android:value="com.example.awstutorial.MainActivity" />
+         </activity>
+
+         <!-- Recommended for Android 9 (API level 28) and lower. -->
+        <!-- Required for Android 10 (API level 29) and higher. -->
+        <service
+            android:name="MyNavigationService"
+            android:foregroundServiceType="location">
+        </service>
     </application>
 
 </manifest>
