--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ amplify-build-config.json
 amplify-gradle-config.json
 amplifytools.xcconfig
 .secret-*
+
+#graphql
+.graphqlconfig.yml
+app/src/main/graphql
