--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.1'
     implementation 'androidx.activity:activity-ktx:1.2.0'
     implementation 'androidx.fragment:fragment-ktx:1.3.2'
+    implementation 'androidx.wear:wear:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -54,4 +55,6 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-location:18.0.0'
 
+    implementation 'org.osmdroid:osmdroid-android:6.1.0'
+    compileOnly 'com.google.android.wearable:wearable:2.6.0'
 }
